# data-playground

./: README.md  README_EN.md
ibge-data/: README.md  README_EN.md  pyproject.toml
ibge-data/ibge_data/: main.py
ibge-data/ibge_data/utils/: data_downloader.py  estrutura_tabela.py
ibge-data/tests/: data_downloader_test.py
