[tool.poetry]
name = "ibge-data"
version = "0.1.0"
description = ""
authors = ["Fernnando Sussmann fernnandosussmann@gmail.com"]
readme = "README.md"
packages = [{include = "ibge_data"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
